--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* INDEX.HTML */
 /* <header> and <nav> */
 
 header, nav {
@@ -124,3 +125,71 @@ header, nav {
     font-weight: bold;
     margin-top: 70px;
 }
+
+/* SIGN_UP.HTML */
+
+.logo_sign_up_container a {
+    text-decoration: none;
+    color: black;
+}
+
+.sign_up_container {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.sign_up_form_container {
+    display: flex;
+    justify-content: center;
+    border: 3px solid #e4d7cb;
+    border-radius: 15px;
+    width: 30%;
+    padding: 10px;
+}
+
+.h2_sign_up {
+    width: 100%;
+    text-align: left;
+    color: darkgoldenrod;
+}
+
+.sign_up_form_container form {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sign_up_form_container label{
+    display: block;
+    width: 100%;
+    margin: 15px 0 5px;
+    text-align: left;
+}
+
+.sign_up_form_container input {
+    width: 90%;
+    height: 25px;
+    margin-bottom: 10px;
+}
+
+.button_sign_up button{
+    width: 200px;
+    color: white;
+    background-color: #e4d7cb;
+    font-weight: bold;
+    font-size: 20px;
+    border: none;
+    border-radius: 25px;
+    margin-top: 20px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.button_sign_up button:active {
+    opacity: 0.5;
+}
+
+
+
