--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,34 @@
     <title>Log in</title>
 </head>
 <body>
-<h1>Hello this works well!!</h1>
+<header>
+    <div class="logo_sign_up_container">
+        <a th:href="@{/}">
+            <h1>FASHLINK</h1>
+            <p>Connecting you to your best look</p>
+        </a>
+    </div>
+</header>
 </body>
+<div class="log_in_container">
+    <div class="log_in_form_container">
+        <form action="#" th:action="@{/login}" th:object="${userLogin}" method="post">
+            <div class="h2_log_in">
+                <h2>CREATE ACCOUNT</h2>
+            </div>
+
+            <label for="email">Email Address | Required</label>
+            <input type="email" id="email" th:field="*{email}" required>
+
+            <label for="password">Password | Required</label>
+            <input type="password" id="password" th:field="*{password}" required>
+
+            <span th:if="${loginError}" th:text="${loginError}" style="color: red; font-size: 15px;"></span>
+            
+            <div class="button_log_in">
+                <button type="submit">LOG IN</button>
+            </div>
+        </form>
+    </div>
+</div>
 </html>
