--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
             <img src="/images/fashlink_logo.png">
         </div>
         <div class="menu">
-            <a th:href="@{/home}">HOME</a>
+            <a th:href="@{/}">HOME</a>
             <a th:href="@{/advisors}">ADVISORS</a>
             <a th:href="@{/fashion}">FASHION</a>
             <a th:href="@{/my_profile}">MY PROFILE</a>
