--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,13 +9,19 @@
 <header>
     <div class="header_container">
         <div class="login">
-            <span sec:authorize="isAuthenticated()">
-                <form action="#" th:action="@{/logout}" method="post" class="logout-form">
-                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+            <!-- Visible only when user is authenticated -->
+            <span th:if="${loggedInUser != null}">
+                <div class="logout_form">
+                    <span>Welcome, <span th:text="${loggedInUser}">User</span>!</span>
+                <form th:action="@{/logout}" method="post" class="logout-form">
+                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
                     <button type="submit" class="logout-button">Logout</button>
                 </form>
+                </div>
             </span>
-            <span sec:authorize="!isAuthenticated()">
+
+            <!-- Visible only when user is not authenticated -->
+            <span th:if="${loggedInUser == null}">
                 <a th:href="@{/login}">Login</a>
                 <a th:href="@{/sign_up}">Sign Up</a>
             </span>
