--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -17,7 +17,7 @@
 <main>
   <div class="sign_up_container">
     <div class="sign_up_form_container">
-      <form action="#" th:action="@{/sign_up}" th:object="${userRegistrationDTO}" method="post">
+      <form action="#" th:action="@{/sign_up}" th:object="${userRegistrationDTO}" method="post" enctype="multipart/form-data">
         <div class="h2_sign_up">
           <h2>CREATE ACCOUNT</h2>
         </div>
@@ -33,6 +33,9 @@
         <input type="email" id="email" th:field="*{email}" required>
         <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color: red; font-size: 15px;"></span>
         <span th:if="${emailError}" th:text="${emailError}" style="color: red; font-size: 15px;"></span>
+
+        <label for="profilePicture">Profile Picture | Optional</label>
+        <input type="file" th:field="*{profilePicture}" id="profilePicture" accept="image/*">
 
         <label for="gender">Gender | Required</label>
         <select id="gender" th:field="*{gender}">
