--- a/src/main/resources/templates/advisors.html
+++ b/src/main/resources/templates/advisors.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/adv_styles.css}"/>
     <link rel="stylesheet" th:href="@{/advisors.css}"/>
     <script th:src="@{/advisors.js}" defer></script>
     <title>NY5th FashLink</title>
