--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/adv_styles.css}"/>
     <link rel="stylesheet" th:href="@{/booking.css}"/>
     <script th:src="@{/booking.js}" defer></script>
     <title>NY5th FashLink</title>
