--- a/src/main/resources/templates/my_profile.html
+++ b/src/main/resources/templates/my_profile.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/adv_styles.css}"/>
     <link rel="stylesheet" th:href="@{/my_profile.css}"/>
     <script th:src="@{/my_profile.js}" defer></script>
     <title>NY5th FashLink</title>
@@ -49,64 +49,73 @@
         </div>
       </div>
 
-      <!--FORM-->
-      <form action="/consultation" id="frmConsultation" method="post">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+      <!--NEXT CONSULTATION-->
+      <div id="next-consultation">
+        <table id="table-next-cons">
 
-        <!--NEXT CONSULTATION-->
-        <div id="next-consultation">
-          <table id="table-next-cons">
-
-            <!--1st line: Picture + Categories + Date/Time + button-->
-            <tr>
-              <td class="next-cons-picture" rowspan="4"><img th:src="${bookings.get(0).getUrlPicture()}" alt="advisor picture"></td>
-              <td>
-                <table class="next-consultation">
-                  <tr><td class="title" colspan="3" >Next Consultation:</td></tr>
-                  <tr><td class="categories" th:text="${#strings.replace(bookings.get(0).getCategories(), '[', '').replace(']', '').replace(',', '  |  ')}">Categories</td></tr>
-                </table>
-              </td>
-              <td class="btn-adv1" rowspan="4">
-                <p th:text="${bookings.get(0).getFormattedDateTime}">Schedule</p>
+          <!--1st line: Picture + Categories + Date/Time + button-->
+          <tr>
+            <td class="next-cons-picture" rowspan="4"><img th:src="${bookings.get(0).getUrlPicture()}" alt="advisor picture"></td>
+            <td>
+              <table class="next-consultation">
+                <tr><td class="title" colspan="3" >Next Consultation:</td></tr>
+                <tr><td class="categories" th:text="${#strings.replace(bookings.get(0).getCategories(), '[', '').replace(']', '').replace(',', '  |  ')}">Categories</td></tr>
+              </table>
+            </td>
+            <td class="btn-adv1" rowspan="4">
+              <p th:text="${bookings.get(0).getFormattedDateTime}">Schedule</p>
+              <!--FORM-->
+              <form action="/consultation" id="frmEnterConsultation" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <input type="hidden" id="booking_id" name="booking_id" th:value="${bookings.get(0).getId()}"/>
+                <input type="hidden" id="advisor_name" name="advisor_name" th:value="${bookings.get(0).getFirstName() + ' ' + bookings.get(0).getLastName().charAt(0) + '.'}"/>
                 <button id="btn_consultation" type="submit">
                   <img src="/images/adv_btn_enterconsultation.png" alt="enter consultation">
                 </button>
-              </td>
-            </tr>
+              </form>
+            </td>
+          </tr>
 
-            <!--2nd line: Advisor's name-->
-            <tr>
-              <td class="advName" th:text="${bookings.get(0).getFirstName() + ' ' + bookings.get(0).getLastName().charAt(0) + '.'}" colspan="3">First Name</td>
-            </tr>
-          </table>
-        </div>
+          <!--2nd line: Advisor's name-->
+          <tr>
+            <td class="advName" th:text="${bookings.get(0).getFirstName() + ' ' + bookings.get(0).getLastName().charAt(0) + '.'}" colspan="3">First Name</td>
+          </tr>
+        </table>
+      </div>
 
-        <h1>Upcoming Consultations</h1>
-        <div id="upc-consultation">
-          <table id="table-upc-cons" th:each="booking, iterStat : ${bookings}" th:if="${iterStat.index > 0}">
+      <h1>Upcoming Consultations</h1>
+      <div id="upc-consultation">
+        <table id="table-upc-cons" th:each="booking, iterStat : ${bookings}" th:if="${iterStat.index > 0}">
 
-            <!--1st line: Picture + Categories + Date/Time + button-->
-            <tr>
-              <td class="upc-cons-picture" rowspan="4"><img class="upc-adv-picture" th:src="${booking.urlPicture}" alt="advisor picture"></td>
-              <td class="categories-upc" th:text="${#strings.replace(booking.categories, '[', '').replace(']', '').replace(',', '  |  ')}">Categories</td>
-              <td class="btn-adv1" rowspan="4">
-                <p th:text="${booking.formattedDateTime}">Schedule</p>
+          <!--1st line: Picture + Categories + Date/Time + button-->
+          <tr>
+            <td class="upc-cons-picture" rowspan="4"><img class="upc-adv-picture" th:src="${booking.urlPicture}" alt="advisor picture"></td>
+            <td class="categories-upc" th:text="${#strings.replace(booking.categories, '[', '').replace(']', '').replace(',', '  |  ')}">Categories</td>
+            <td class="btn-adv1" rowspan="4">
+              <p th:text="${booking.formattedDateTime}">Schedule</p>
+              <!--FORM-->
+              <form action="/reschedule" id="frmRescheduleConsultation" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <button class="upc-btn-resched" type="submit">
                   <img src="/images/adv_btn_reschedule.png" alt="schedule">
                 </button>
+              </form>
+              <!--FORM-->
+              <form action="/cancel" id="frmCancelConsultation" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <button class="upc-btn-cancel" type="submit">
                   <img src="/images/adv_btn_cancel.png" alt="cancel">
                 </button>
-              </td>
-            </tr>
+              </form>
+            </td>
+          </tr>
 
-            <!--2nd line: Advisor's name-->
-            <tr>
-              <td class="advName-upc" th:text="${booking.firstName + ' ' + booking.lastName.charAt(0) + '.'}" colspan="3">First Name</td>
-            </tr>
-          </table>
-        </div>
-      </form>
+          <!--2nd line: Advisor's name-->
+          <tr>
+            <td class="advName-upc" th:text="${booking.firstName + ' ' + booking.lastName.charAt(0) + '.'}" colspan="3">First Name</td>
+          </tr>
+        </table>
+      </div>
     </main>
   </body>
 </html>
