--- a/src/main/resources/templates/consultation.html
+++ b/src/main/resources/templates/consultation.html
@@ -72,6 +72,7 @@
           <input id="appid" type="hidden" value="1c3afea4acd64d4f94760320716edf63" required>
           <input id="token" type="hidden" placeholder="enter token">
           <input id="channel" type="hidden" value="fashlink" required>
+          <input id="bookingID" type="hidden" th:value="${bookingId}">
 
           <div class="button-group">
             <button id="join" type="submit">
