--- a/src/main/resources/templates/my_profile.html
+++ b/src/main/resources/templates/my_profile.html
@@ -49,26 +49,26 @@
       </div>
 
       <!--NEXT CONSULTATION-->
-      <div th:if="${bookings != null and bookings.size() > 0}">
+      <div th:if="${!#lists.isEmpty(nextBooking)}">
         <div class="next-consultation">
           <table id="table-next-cons">
 
             <!--1st line: Picture + Categories + Date/Time + button-->
             <tr>
-              <td class="next-cons-picture" rowspan="4"><img th:src="${bookings.get(0).getUrlPicture()}" alt="advisor picture"></td>
+              <td class="next-cons-picture" rowspan="4"><img th:src="${nextBooking.get(0)?.getUrlPicture()}" alt="advisor picture"></td>
               <td>
                 <table class="next-consultation">
                   <tr><td class="title" colspan="3" >Next Consultation:</td></tr>
-                  <tr><td class="categories" th:text="${#strings.replace(bookings.get(0).getCategories(), '[', '').replace(']', '').replace(',', '  |  ')}">Categories</td></tr>
+                  <tr><td class="categories" th:text="${#strings.replace(nextBooking.get(0)?.getCategories(), '[', '').replace(']', '').replace(',', '  |  ')}">Categories</td></tr>
                 </table>
               </td>
               <td class="btn-adv1" rowspan="4">
-                <p th:text="${bookings.get(0).getFormattedDateTime}">Schedule</p>
+                <p th:text="${nextBooking.get(0)?.getFormattedDateTime}">Schedule</p>
                 <!--FORM-->
                 <form action="/consultation" id="frmEnterConsultation" method="post">
                   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                  <input type="hidden" id="booking_id" name="booking_id" th:value="${bookings.get(0).getId()}"/>
-                  <input type="hidden" id="advisor_name" name="advisor_name" th:value="${bookings.get(0).getFirstName() + ' ' + bookings.get(0).getLastName().charAt(0) + '.'}"/>
+                  <input type="hidden" id="booking_id" name="booking_id" th:value="${nextBooking.get(0)?.getId()}"/>
+                  <input type="hidden" id="advisor_name" name="advisor_name" th:value="${nextBooking.get(0)?.getFirstName() + ' ' + bookings.get(0)?.getLastName().charAt(0) + '.'}"/>
                   <button id="btn_consultation" type="submit">
                     <img src="/images/adv_btn_enterconsultation.png" alt="enter consultation">
                   </button>
@@ -78,21 +78,21 @@
 
             <!--2nd line: Advisor's name-->
             <tr>
-              <td class="advName" th:text="${bookings.get(0).getFirstName() + ' ' + bookings.get(0).getLastName().charAt(0) + '.'}" colspan="3">First Name</td>
+              <td class="advName" th:text="${nextBooking.get(0)?.getFirstName() + ' ' + nextBooking.get(0)?.getLastName().charAt(0) + '.'}" colspan="3">First Name</td>
             </tr>
           </table>
         </div>
       </div>
 
-      <div th:if="${bookings[0] == null or bookings.size() == 0}" class="next-consultation">
+      <div th:if="${#lists.isEmpty(nextBooking)}">
         <div class="next-consultation">
-          <p>No booking found.</p>
+          <h3>No booking found.</h3>
         </div>
       </div>
 
       <h1>Upcoming Consultations</h1>
       <div id="upc-consultation">
-        <table id="table-upc-cons" th:each="booking, iterStat : ${bookings}" th:if="${iterStat.index > 0}">
+        <table id="table-upc-cons" th:each="booking, iterStat : ${bookings}"> <!--th:if="${iterStat.index > 0}"-->
 
           <!--1st line: Picture + Categories + Date/Time + button-->
           <tr>
