--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,34 +2,40 @@
 <html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/adv_styles.css}"/>
+    <link rel="stylesheet" th:href="@{/index.css}"/>
     <title>NY5th FashLink</title>
 </head>
 <body>
+<body>
 <header>
+    <!--USER INFO-->
     <div class="header_container">
         <div class="login">
+
             <!-- Visible only when user is authenticated -->
             <span th:if="${loggedInUser != null}">
                 <div class="logout_form">
-                    <span>Welcome, <span th:text="${loggedInUser}">User</span>!</span>
-                <form th:action="@{/logout}" method="post" class="logout-form">
+                  <span>Welcome, <span th:text="${loggedInUser}">User</span>!</span>
+                  <form th:action="@{/logout}" method="post" class="logout-form">
                     <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
                     <button type="submit" class="logout-button">Logout</button>
                     <input type="hidden" th:value="${loggedInUserEmail}"/>
-                </form>
+                  </form>
                 </div>
-            </span>
+              </span>
 
             <!-- Visible only when user is not authenticated -->
             <span th:if="${loggedInUser == null}">
                 <a th:href="@{/login}">Login</a>
                 <a th:href="@{/sign_up}">Sign Up</a>
-            </span>
+              </span>
         </div>
     </div>
 </header>
-<nav>
+<main>
+
+    <!--LOGO + MENU-->
     <div class="nav_container">
         <div class="logo">
             <img src="/images/fashlink_logo.png">
@@ -42,44 +48,38 @@
             <a th:href="@{/messages}">MESSAGES</a>
         </div>
     </div>
-</nav>
-<main>
-    <div class="main_container">
-        <div class="img_text_container">
-            <div class="img_text_container_col1">
-                <img src="/images/main_pic_1.png" style="width: 100%; height: 100%;">
-            </div>
-            <div class="img_text_container_col2">
-                <p>Unlock personalized fashion<br>
-                    tips and exclusive content<br>
-                     to elevate your style<br><br><br>
-                      <a th:href="@{/sign_up}"> Sign up for free</a>
-                </p>
+
+    <!-- MAIN BANNER -->
+    <div class="img_text_container_col1">
+        <a th:href="@{/sign_up}"><img src="/images/main_banner.png" alt="banner"></a>
+    </div>
+
+    <!-- 2nd line: text at the left + 3 pictures -->
+    <div class="img_text_container2">
+        <div class="img_text_container2_col1">
+            <p>
+                Ready to elevate your fall wardrobe? Discover how to
+                perfectly style accessories with tips from our expert
+                fashion advisors. From cozy layers to chic accents, we've
+                got all the insights you need to stay warm and
+                fashionable this season. Dive into the latest trends and
+                personalized advice to make your fall outfits stand out!
+            </p>
+            <div class="button_container">
+                <form action="/fashion"  method="post">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                    <button type="submit">READ NOW</button>
+                </form>
             </div>
         </div>
-        <div class="img_text_container2">
-            <div class="img_text_container2_col1">
-                <p>
-                    Ready to elevate your fall wardrobe? Discover how to<br>
-                    perfectly style accessories with tips from our expert<br>
-                    fashion advisors. From cozy layers to chic accents, we've<br>
-                    got all the insights you need to stay warm and<br>
-                    fashionable this season. Dive into the latest trends and<br>
-                    personalized advice to make your fall outfits stand out!
-                </p>
-                <div class="button_container">
-                    <button>READ NOW</button>
-                </div>
-            </div>
-            <div class="img_text_container2_col2">
-                <img src="/images/main_pic_2.png" style="width: 100%; height: 250px">
-            </div>
-            <div class="img_text_container2_col3">
-                <img src="/images/main_pic_3.png" style="width: 100%; height: 250px;">
-            </div>
-            <div class="img_text_container2_col4">
-                <img src="/images/main_pic_4.png" style="width: 100%; height: 250px;">
-            </div>
+        <div class="img_text_container2_col2">
+            <img src="/images/main_pic_2.png" style="width: 100%; height: 250px">
+        </div>
+        <div class="img_text_container2_col3">
+            <img src="/images/main_pic_3.png" style="width: 100%; height: 250px;">
+        </div>
+        <div class="img_text_container2_col4">
+            <img src="/images/main_pic_4.png" style="width: 100%; height: 250px;">
         </div>
     </div>
 </main>
